# Conclava

./: .env.example  .gitignore  CONTRIBUTING.md  HANDOFF.md  INSTALL.en.md  INSTALL.md  LAUNCH_posts.md  README.md  README.zh-TW.md  SECURITY.md  VERSION  pyproject.toml
conclava/: __init__.py  action_parser.py  agent_events.py  agent_orchestrator.py  agent_prompts.py  agent_router.py  agent_store.py  cli.py  config.py  context_compactor.py  conversation_store.py  fusion_core.py  fusion_deliberation.py  fusion_presets.py  fusion_request.py  fusion_retry.py  fusion_synthesis.py  message_parsing.py  mlx_optimizations.py  model_capabilities.py  model_selector.py  models.py  profiles.py  prompts.py  render_anthropic_messages.py  render_openai_chat.py  render_openai_responses.py  repair_loop.py  repo_index.py  schemas.py  server.py  streaming.py  streaming_events.py  test_runner.py  tool_specs.py  tool_validation.py  v18_prompts.py  vision.py  vision_processor.py  vision_router.py  (+1 more)
conclava_sdk/: __init__.py  client.py  events.py
docs/: INTERNAL.md
scripts/: benchmark_m5.sh  benchmark_speculative.py  install_warmup_launchd.sh  lms_benchmark.py  start_all.sh  start_server.sh  stop_all.sh  stress_test.sh  test_fusion_bad_preset.sh  test_fusion_budget.sh  test_fusion_coding.sh  test_fusion_custom.sh  test_fusion_heavy.sh  test_fusion_quality.sh  verify_all.sh  warmup_fusion_budget.sh  warmup_fusion_quality.sh  warmup_now.sh
tests/: __init__.py  conftest.py  test_action_parser.py  test_agent_events.py  test_agent_orchestrator.py  test_agent_orchestrator_malformed_executor.py  (+84 more)
(+3 files in other folders)
