[project]
name = "conclava"
version = "1.6.0"
description = "Tool-aware local multi-model gateway for Codex, Claude Code, Hermes, Ollama, and ds4."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "HenryLinyy" }]
requires-python = ">=3.11"
keywords = ["local-llm", "apple-silicon", "mlx", "codex", "claude-code"]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "jsonschema>=4.23.0",
]

[project.scripts]
conclava = "conclava.cli:main"

[project.urls]
Homepage = "https://github.com/HenryLinyy/conclava"
Repository = "https://github.com/HenryLinyy/conclava"
Issues = "https://github.com/HenryLinyy/conclava/issues"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
conclava = ["web/*.html"]

[tool.setuptools.packages.find]
include = ["conclava", "conclava.*", "conclava_sdk", "conclava_sdk.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
